# call-center

./: .clang-format  .gitignore  CMakeLists.txt  config.json  log4cplus.properties
app/: CMakeLists.txt
app/include/: CallCenter.h  CallDetail.h  CallDetailRecord.h  Exceptions.h  Operator.h  Types.h
app/include/callcenter/: CallCenter.h  CallDetail.h  UserSimulation.h
app/include/config/: CallCenterConfig.h  Configs.h  Configuration.h  IConfig.h  JsonConfig.h  ServerConfig.h  UserConfig.h
app/include/controller/: AbonentController.h  IController.h  UserController.h
app/include/models/: Abonent.h  Operator.h  User.h
app/include/server/: CallController.h  HttpSession.h  Listener.h  Serever.h  Server.h
app/include/utils/: AbonentSimulation.h  Exceptions.h  Macros.h  Types.h  UserSimulation.h
app/src/: CallCenter.cpp  CallDetail.cpp  CallDetailRecord.cpp  Operator.cpp  main.cpp
app/src/callcenter/: CallCenter.cpp  CallDetail.cpp  UserSimulation.cpp
app/src/config/: CallCenterConfig.cpp  JsonConfig.cpp  ServerConfig.cpp  UserConfig.cpp
app/src/controller/: AbonentController.cpp  IController.cpp  UserController.cpp
app/src/models/: Abonent.cpp  Operator.cpp  User.cpp
app/src/server/: CallController.cpp  HttpSession.cpp  Listener.cpp  Serever.cpp  Server.cpp
app/src/utils/: AbonentSimulation.cpp  UserSimulation.cpp
log4cpp/include/: Makefile
log4cpp/include/log4cpp/: Makefile
log4cpp/include/log4cpp/threading/: Makefile
src/: CMakeLists.txt  CallDetailRecord.cpp  CallDetailRecord.h
test/: CMakeLists.txt  CallDetailRecordTest.cpp  CallDetailTest.cpp
test/callcenter/: CallCenterTest.cpp  CallDetailTest.cpp  UserSimulationTest.cpp
test/models/: OperatorTest.cpp  UserSimulationTest.cpp  UserTest.cpp
