add_compile_options(
        -Werror

        -Wall
        -Wextra
        -Wpedantic

        -Wcast-align
        -Wcast-qual
        -Wconversion
        -Wctor-dtor-privacy
        -Wenum-compare
        -Wfloat-equal
        -Wnon-virtual-dtor
        -Wold-style-cast
        -Woverloaded-virtual
        -Wredundant-decls
        -Wsign-conversion
        -Wsign-promo
)

add_executable(${APP_NAME} ${APP_SOURCES})

target_link_libraries(${APP_NAME} ${Log4Cpp_LIB})
target_include_directories(${APP_NAME} PUBLIC ${APP_INCLUDE_PATH})